# FinRep

./: .dockerignore  .env.example  .gitignore  DASH_MVP_PLAN.md  Dockerfile  NEXT_ROADMAP.md  PROJECT_PLAN.md  README.md  docker-compose.yml  environment.yml  main.py  main_tg_bot.py  pyproject.toml  requirements.txt
AGENTS_MD/: DEPLOYMENT.md  OPEN_SOURCE_CHECKLIST.md
assets/: dashboard.css
sample_data/assets_info/2025/: 2025_01.csv  2025_04.csv  2025_07.csv  2025_10.csv  2025_12.csv
sample_data/assets_info/2026/: 2026_01.csv  2026_02.csv  2026_03.csv  2026_04.csv  (+1 more)
sample_data/debts/: debt_payments.csv  debts.csv
sample_data/import_rules/: categories.csv
sample_data/investments/: crypto_balances.csv  crypto_refresh_status.csv  crypto_transactions.csv  crypto_wallets.csv  instruments.csv  investments.csv  price_cache.csv  transactions.csv
sample_data/plans/: goals.csv
sample_data/rates/: fx_rates.csv
sample_data/staging/: transaction_drafts.csv
scripts/: create_env.sh  flet_app.sh
sql/: create_bd.sql
src/: config.py  main.py  secrets_template.json  utils.py
src/dashboard/: __init__.py  app.py  export.py  investment_data.py  main_data.py  month_data.py  planning_data.py  year_data.py
src/data/: assets_editor.py  crypto.py  debts.py  exchange_rates_info.py  get.py  get_finance.py  investment_calculations.py  investments.py  proccess.py  staging.py  to_sql.py  validation.py
src/flatter_app/: caledar.py  main.py
src/model/: create_tables.py
src/reports/: helpers.py  main_report.py  month_report.py  year_report.py
src/telegram_bot/: bot.py
(+12 files in other folders)
