[project]
name = "finrep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "pandas==2.1.1",
    "numpy==1.26.4",
    "requests==2.27.1",
    "yfinance==0.2.18",
    "plotly==5.17.0",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "twelvedata>=1.2.25",
    "alpha-vantage>=3.0.0",
]
