[project]
name = "finrep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "pandas==2.1.1",
    "numpy==1.26.4",
    "requests>=2.31,<3",
    "yfinance==1.3.0",
    "plotly==5.17.0",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "twelvedata>=1.2.25",
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-ag-grid>=35.2.0",
    "openpyxl>=3.1.5",
    "playwright>=1.58.0",
]
